update metadata Generated cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -10,6 +10,9 @@ contributor:
     gutenberg_agent_id: '56690'
     url: http://www.gutenberg.org/2009/agents/56690
     wikipedia: https://hu.wikipedia.org/wiki/Saj%C3%B3_Alad%C3%A1r
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Bonsels, Waldemar
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/9680
     wikipedia: https://de.wikipedia.org/wiki/Waldemar_Bonsels
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72458#Emberek-utja-b-Egy-csavargo-jegyzeteibol
 gutenberg_issued: '2023-12-20'
 gutenberg_type: Text
 identifiers:
